# JPEGTurboSwift

./: CMakeLists.txt
Sources/JPEG/: JPEG.swift
